fix compilation of examples with ajava 1.4
git-svn-id: file:///root/var/svn/aranea/branches/change_515@3767 baba0d3d-6527-0410-ba98-ffd8059025de